# Bootcamp_Python

./: .gitignore  .pre-commit-config.yaml  README.md  environment.txt  pyproject.toml  requirements.txt
Day_9/: grading_program.py
day_1/: band_name_generator.py
day_10/: calculator.py  days_in_month.py
day_11/: art.py  blackjack.py  blackjack_dict.py  clear.py
day_12/: art.py  guess_the_number.py  scope.py
day_13/: debagging.py  debugging_odd_or_even.py
day_14/: clear.py  higher_lower.py
day_15/: coffee_machine.py  readme.md
day_16_OOP/: another_module.py  main.py  menu.py  money_machine.py  readme.md  run_example.py
day_17/: data_1.py  examples.py  main.py  quiz_brain.py
day_18/: color_extract.py  intro_turtle.py  turtle_ex.py
day_19/: move_by_keys.py  turtle_race.py
day_2/: data_types.py
day_20/: beggining_snake.py  main.py  snake.py
day_21/: food.py  inheritance.py  main.py  scoreboard.py
day_22/: main.py  paddle.py  scoreboard.py
day_23/: main.py
day_24/: examples.py  main.py  scoreboard.py
day_25/: main.py  squirrel_count.csv  weather_data.csv
day_26/: data_frame_iteration.py  data_overlap.py  main.py  squaring_number.py
day_27/: calculator.py  example_arg_kwargs.py  main.py  mile_to_km.py  tkinter_widget_demo.py
day_28/: main.py
day_29/: data.txt  main.py  passwd_generator.py
day_3/: conditional_statements.py  treasure_island.py
day_30/: ex_try_catch.py  index_error_handling.py  key_error_handling.py  pass_manager.py
day_31/: main.py
day_32/: birthdays.csv  main.py  mixt.py  simple_datetime.py  simple_smtp.py
(+147 files in other folders)
