[tool.poetry]
name = "bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Siracenco Serghei <siracencoserghei@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.7"
cfgv = "3.4.0"
distlib = "0.3.8"
filelock = "3.14.0"
identify = "2.5.36"
install = "1.3.5"
nodeenv = "1.9.0"
platformdirs = "4.2.2"
pre-commit = "3.7.1"
pyyaml = "6.0.1"
virtualenv = "20.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
